01_ingress-service-example.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-ingress-service
  namespace: default
  labels:
    app: nginx-ingress
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  selector:
    app: nginx-ingress
  ports:
  - name: http
    port: 80
    targetPort: http
  - name: https
    port: 443
    targetPort: https
