ingress-manifest.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: test-ingress
  namespace: default
spec:
  rules:
    - host: www.example.com
      http:
        paths:
          - backend:
              serviceName: azure-vote-front
              servicePort: 80
            path: /
